[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/interface/container_panel.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/coin_background.png" type="Texture" id=2]
[ext_resource path="res://assets/interface/coin.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Kenney Future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/left_container.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=1]
resource_name = "coin_animation"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("VContainer/CoinBackground:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VContainer/CoinBackground/Coin:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VContainer/CoinBackground/Coin:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}

[node name="LeftContainer" type="Control" groups=[
"Left_Container",
]]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -300.0
margin_right = 256.0
margin_bottom = 300.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -278.0
margin_right = 110.0
margin_bottom = 278.0
rect_min_size = Vector2( 220, 556 )
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabName" type="Label" parent="VContainer"]
margin_right = 221.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Shadowsisko's
Laboratory"
align = 1
valign = 1

[node name="TFContainer" type="VBoxContainer" parent="VContainer"]
margin_top = 79.0
margin_right = 221.0
margin_bottom = 119.0

[node name="VaccineTitle" type="Label" parent="VContainer/TFContainer"]
margin_right = 221.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
text = "Current Vaccines"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VaccineFarm" type="Label" parent="VContainer/TFContainer"]
margin_top = 22.0
margin_right = 221.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "0 G"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinBackground" type="TextureRect" parent="VContainer"]
margin_top = 159.0
margin_right = 221.0
margin_bottom = 379.0
rect_min_size = Vector2( 220, 220 )
rect_pivot_offset = Vector2( 110, 110 )
texture = ExtResource( 2 )
expand = true

[node name="Coin" type="TextureRect" parent="VContainer/CoinBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.5
margin_top = -29.0
margin_right = 28.5
margin_bottom = 29.0
rect_pivot_offset = Vector2( 28, 29 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinButton" type="TextureButton" parent="VContainer/CoinBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSContainer" type="VBoxContainer" parent="VContainer"]
margin_top = 419.0
margin_right = 221.0
margin_bottom = 459.0

[node name="VaccineTitle" type="Label" parent="VContainer/FPSContainer"]
margin_right = 221.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
text = "Vaccines per Second"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VaccineFarm" type="Label" parent="VContainer/FPSContainer"]
margin_top = 22.0
margin_right = 221.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "0.1 G"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "coin_animation"
anims/coin_animation = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="VContainer/CoinBackground/CoinButton" to="." method="on_button_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="on_tween_completed"]
